# AxonIPC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
AxonIPC/: CMakeLists.txt
AxonIPC/AxonIPC/: AxonIPCPublisher.h  AxonIPCSubscriber.h  BinaryReader.h  BinaryWriter.h  Context.h  Dispatcher.h  Path.h  Platform.h  Publisher.h  Socket.h  Subscriber.h
AxonIPC/src/: AxonIPCPublisher.cpp  AxonIPCSubscriber.cpp  BinaryReader.cpp  BinaryWriter.cpp  Context.cpp  Dispatcher.cpp  Path.cpp  Platform.cpp  Publisher.cpp  Socket.cpp  Subscriber.cpp
AxonIPCExample/: CMakeLists.txt
AxonIPCExample/src/: North.cpp  South.cpp
AxonIPCTests/: CMakeLists.txt
AxonIPCTests/cmake/: utils.cmake
AxonIPCTests/mocks/: ContextMock.h
AxonIPCTests/tests/: AxonIPCSubscriberTests.cpp  AxonIPCTests.cpp  BinaryReaderTests.cpp
